--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+        window.importDotNet = import('/_framework/dotnet.js')
+    </script>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
